okay so... trying to get joy here but... currently it's getting undefined values.
More specifically:

> TypeError: Cannot read properties of undefined (reading 'whenReady')

which... sounds a lot like it's...

oh, yeah, this isn't doing rightful stuff at all.  Wowsa.
Reading the generated js: the thing it's doing for "electron" is just getting a path.
(Also, it's baking a value for "__dirname" into the generated js, which is extermely not chill.)
So bun is picking the "wrong" value of "electron" package entirely.

Also it's downloading electron into my node_modules again which does not feel like... what I want.

Soooooo okayyyyyyy what next

--- a/package.json
+++ b/package.json
@@ -3,15 +3,16 @@
   "version": "0.0.1",
   "description": "Hello World!",
   "scripts": {
-    "build": "bun build ./src/*.js --target=node",
-    "watch": "bun build ./src/*.js --target=node --watch",
-    "start": "bun run build && time ./lib/electron/electron ./dist/main.js"
+    "prep": "bun install",
+    "build": "bun build ./src/*.js --target=node --outdir=./dist/",
+    "watch": "bun build ./src/*.js --target=node --outdir=./dist/ --watch",
+    "start": "rm -rf dist/* && bun run build && time ./lib/electron/electron ./dist/main.js"
   },
-  "devDependencies": {
-    "electron": "^35.1.0"
-  },
+  "type": "module",
+  "devDependencies": {},
   "dependencies": {},
   "peerDependencies": {
+    "electron": "^35",
     "typescript": "^5.0.0"
   }
 }
