is asking for just types about electron any less fucked?  no, in fact it's exactly the same outcome.
i... don't understand this.  The electron package page on npmjs.org
actually directly mentions this "it'll return a path if you use it in
node" outcome, but... okay?
What the fuck am I supposed to *do* about it...?
That is the least helpful and useful behavior I've ever seen, and this
_should_ be such a simple thing that it's driving me absolutely bonk.

--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "start": "rm -rf dist/* && bun run build && time ./lib/electron/electron ./dist/main.js"
   },
   "type": "module",
-  "devDependencies": {},
+  "devDependencies": {
+    "@types/electron": "^1"
+  },
   "dependencies": {},
   "peerDependencies": {
-    "electron": "^35",
+    // "electron": "^35",
     "typescript": "^5.0.0"
   }
 }
