there we go!  just call electron external, bim bam bop, works.
And we do have types now.  The electron package does include them.

Ideally I would like to *not* have the "@electron/get" package
drop hundreds of megs into node_modules, if I've chosen to already
manage the electron install elsewhere, which... I have.
Let's... see if that's possible.

--- a/package.json
+++ b/package.json
@@ -4,17 +4,16 @@
   "description": "Hello World!",
   "scripts": {
     "prep": "bun install",
-    "build": "bun build ./src/*.ts --target=node --outdir=./dist/",
-    "watch": "bun build ./src/*.ts --target=node --outdir=./dist/ --watch",
+    "build": "bun build ./src/*.ts --external=electron --target=node --outdir=./dist/",
+    "watch": "bun build ./src/*.ts --external=electron --target=node --outdir=./dist/ --watch",
     "start": "rm -rf dist/* && bun run build && time ./lib/electron/electron ./dist/main.js"
   },
   "type": "module",
   "devDependencies": {
-    "@types/electron": "^1"
+    "electron": "^35"
   },
   "dependencies": {},
   "peerDependencies": {
-    // "electron": "^35",
     "typescript": "^5.0.0"
   }
 }
