--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "description": "Hello World!",
   "scripts": {
-    "prep": "bun install",
+    "prep": "ELECTRON_SKIP_BINARY_DOWNLOAD=1 bun install",
     "build": "bun build ./src/*.ts --external=electron --target=node --outdir=./dist/",
     "watch": "bun build ./src/*.ts --external=electron --target=node --outdir=./dist/ --watch",
     "start": "rm -rf dist/* && bun run build && time ./lib/electron/electron ./dist/main.js"
