okay, watch is a little tricky.  and paths are fun.  and the electron app doesn't actually pick up changes, either, still.
but, um, okay.
Let's take a next step of "make sure we can have preload and renderer
scripts" and do that in typescript before we go any further.

Also I should probably check that things like filesystem and proc exec
are actually viable in this bun/node mangle of a world,
because that's... not yet proven, and kinda important.

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "prep": "ELECTRON_SKIP_BINARY_DOWNLOAD=1 bun install",
     "build": "bun build ./src/*.ts --external=electron --target=node --outdir=./dist/",
-    "watch": "bun build ./src/*.ts --external=electron --target=node --outdir=./dist/ --watch",
+    "watch": "bun run build && bun build --watch --no-clear-screen ./src/*.ts --external=electron --target=node --outdir=./dist/ &",
+    "startwatch": "rm -rf dist/* && bun run watch && time ./lib/electron/electron ./dist/main.js",
     "start": "rm -rf dist/* && bun run build && time ./lib/electron/electron ./dist/main.js"
   },
   "type": "module",
