--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Hello World!",
   "scripts": {
     "prep": "ELECTRON_SKIP_BINARY_DOWNLOAD=1 bun install",
-    "build": "bun build ./src/*.ts --external=electron --external=require --target=node --outdir=./dist/",
+    "build": "bun build ./src/*.ts --external=electron --target=node --outdir=./dist/",
     "watch": "bun run build && bun build --watch --no-clear-screen ./src/*.ts --external=electron --target=node --outdir=./dist/ &",
     "startwatch": "rm -rf dist/* && bun run watch && time ./lib/electron/electron ./dist/main.js",
     "start": "rm -rf dist/* && bun run build && time ./lib/electron/electron ./dist/main.js"
